tests/semantic/invalid/struct_self_reference.src
struct Node {
    int value;
    Node next;
}
